<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/biru"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COFFESHOP"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_margin="12dp">
    </TextView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
    android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_beer"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/beer"
                    android:text="@string/pindah_ke_wanganteng1">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Beer"
                    android:textColor="	#000000"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_Coffe"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/coffe"
                    android:text="@string/string_pindah_ke_wanganteng2">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Coffe"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_hotchocolate"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/hotchocolate"
                    android:text="@string/string_pindah_ke_wanganteng3">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Chocolate"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_juice"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/juice"
                    android:text="@string/string_pindah_ke_wanganteng4">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Juice"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_milk"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/milk"
                    android:text="@string/string_pindah_ke_wanganteng5">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Milk"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity = "center_horizontal|center_vertical">
                <ImageView
                    android:id="@+id/iv_tea"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity = "center_horizontal|center_vertical"
                    android:src="@drawable/tea"
                    android:text="@string/string_pindahkewanganteng6">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Tea"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

</RelativeLayout>